--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,10 @@
     "@material-ui/styles": "^4.11.1",
     "@reach/router": "^1.3.4",
     "axios": "^0.21.0",
+    "color-scheme": "^1.0.1",
     "file-saver": "^2.0.5",
     "gatsby": "^2.27.5",
-    "gatsby-theme-q3": "^1.25.0",
+    "gatsby-theme-q3": "^1.19.10",
     "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
     "q3-admin": "^1.25.3",
@@ -34,6 +35,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "11.7.3",
+    "recharts": "^2.0.3",
     "yup": "^0.31.1"
   },
   "license": "MIT",
