--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -17,6 +17,7 @@
     "moment": "2.29.1",
     "notistack": "^1.0.2",
     "prop-types": "^15.7.2",
+    "q3-ui-charts": "^1.0.0",
     "react-butterfiles": "^1.3.3",
     "react-helmet": "^6.1.0",
     "useful-state": "^1.2.0",
