--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -46,6 +46,8 @@
     "query-string": "^6.13.7",
     "react-share": "^4.3.1",
     "slugify": "^1.4.6",
+    "string-replace-webpack-plugin": "^0.1.3",
+    "transform-loader": "^0.2.4",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
