--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "@rushstack/eslint-patch": "^1.1.0",
+    "@storybook/addon-a11y": "^6.4.3",
     "@storybook/addon-actions": "^6.4.0",
     "@storybook/addon-knobs": "^6.3.1",
     "axios-mock-adapter": "^1.19.0",
@@ -65,6 +66,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.11.4",
+    "@mui/x-data-grid": "^4.0.0",
     "@reach/router": "^1.3.4",
     "@storybook/addon-essentials": "^6.4.0",
     "@storybook/react": "^6.4.0",
