--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
   "useWorkspaces": true,
   "packages": [
     "gatsby-theme-q3",
+    "gatsby-theme-q3-mui",
     "packages/*"
   ],
   "version": "2.2.2",
