--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "workspaces": [
     "example",
     "gatsby-theme-q3",
+    "gatsby-theme-q3-mui",
     "packages/*"
   ],
   "devDependencies": {
@@ -93,7 +94,6 @@
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-sitemap": "^5.2.0",
     "gatsby-source-contentful": "^7.0.0",
-    "gatsby-theme-q3": "^1.19.10",
     "gatsby-transformer-sharp": "^4.2.0",
     "i18next": "^21.5.4",
     "is-glob": "^4.0.3",
