--- a/gatsby-theme-q3-mui/package.json
+++ b/gatsby-theme-q3-mui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-theme-q3-mui",
-  "version": "2.3.2",
+  "version": "2.3.4",
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "q3-ui": "^2.3.2",
-    "q3-ui-locale": "^2.3.2",
-    "q3-ui-forms": "^2.3.2"
+    "q3-ui-forms": "^2.3.2",
+    "q3-ui-locale": "^2.3.2"
   }
 }
