--- a/gatsby-theme-q3/package.json
+++ b/gatsby-theme-q3/package.json
@@ -19,6 +19,7 @@
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "@contentful/rich-text-types": "^15.7.0",
     "add": "^2.0.6",
+    "buffer": "^6.0.3",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.5",
