--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -22,12 +22,14 @@
     "q3-ui-confirm": "^2.3.11",
     "q3-ui-datatables": "^2.3.11",
     "q3-ui-dialog": "^2.3.11",
+    "q3-ui-emaileditor": "^2.3.11",
     "q3-ui-filemanager": "^2.3.11",
     "q3-ui-filters": "^1.0.0",
     "q3-ui-forms": "^2.3.11",
     "q3-ui-helpers": "^2.2.0",
     "q3-ui-locale": "^2.3.11",
     "q3-ui-permissions": "^2.3.11",
+    "q3-ui-queuelogs": "^2.3.11",
     "q3-ui-rest": "^2.3.11",
     "react-butterfiles": "^1.3.3",
     "react-helmet": "^6.1.0",
