--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -6,6 +6,12 @@
     "q3-ui-test-utils": "^2.2.0"
   },
   "dependencies": {
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "comparisons": "^2.2.10",
