--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -36,6 +36,7 @@
     "q3-ui-helpers": "^2.2.0",
     "q3-ui-locale": "^2.3.11",
     "q3-ui-permissions": "^2.3.11",
+    "q3-ui-queryparams": "^2.3.11",
     "q3-ui-queuelogs": "^2.3.11",
     "q3-ui-rest": "^2.3.11",
     "react-butterfiles": "^1.3.3",
