--- a/packages/q3-ui-locale/package.json
+++ b/packages/q3-ui-locale/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "i18next": "^21.5.4",
-    "i18next-resources-to-backend": "^1.0.0",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "lodash": "^4.17.20",
     "moment": "2.29.1",
     "moment-timezone": "^0.5.34",
     "prop-types": "^15.7.2",
