--- a/.storybook/settings.json
+++ b/.storybook/settings.json
@@ -1,5 +1,6 @@
 {
   "brand": "3merge",
+  "font": "Nunito",
   "description": "Sample Q3 setup json",
   "favicon": "https://avatars.githubusercontent.com/u/12897090?s=200&v=4",
   "lng": "en",
