--- a/packages/q3-ui-repeater/package.json
+++ b/packages/q3-ui-repeater/package.json
@@ -17,6 +17,7 @@
     "q3-ui-dialog": "^3.2.1",
     "q3-ui-exports": "^3.2.1",
     "q3-ui-forms": "^3.3.1",
+    "q3-ui-helpers": "^3.2.0",
     "q3-ui-locale": "^3.2.1",
     "q3-ui-permissions": "^3.3.1",
     "useful-state": "^1.2.3"
