--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -10,6 +10,8 @@
     "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/interaction": "^5.10.1",
     "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/moment": "^5.10.1",
+    "@fullcalendar/moment-timezone": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "axios": "^0.24.0",
