--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "private": true,
   "license": "MIT",
   "resolutions": {
+    "async": "^3.2.3",
+    "browserslist": "^4.20.3",
+    "glob-parent": "^5.1.2",
+    "moment": "^2.29.3",
+    "node-fetch": "^2.6.7",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "trim": "^0.0.3"
   },
   "scripts": {
     "postinstall": "yarnw-sync-deps && yarn-deduplicate",
@@ -14,10 +20,7 @@
     "storybook": "set NODE_ENV=development&& start-storybook",
     "upload": "yarn build && lerna publish",
     "deploy": "yarn build && build-storybook --docs",
-    "test": "jest --collectCoverage --silent --run-in-band",
-    "deploy-storybook": "storybook-to-ghpages -- --out=.out --docs",
-    "e2e:develop": "yarn workspace example develop",
-    "e2e:stage": "yarn workspace example serve -p 8000"
+    "test": "jest --collectCoverage --silent --run-in-band"
   },
   "workspaces": [
     "example",
