--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -23,6 +23,7 @@
     "q3-ui-helpers": "^3.6.0",
     "q3-ui-locale": "^3.6.0",
     "react-butterfiles": "^1.3.3",
+    "react-doc-viewer": "^0.1.5",
     "react-dropzone": "^11.4.2"
   }
 }
