--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "alphabetize-object-keys": "^3.0.0",
     "classnames": "^2.2.6",
+    "dragselect": "^2.3.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-ui": "^3.6.10",
@@ -23,7 +24,9 @@
     "q3-ui-helpers": "^3.6.0",
     "q3-ui-locale": "^3.6.0",
     "react-butterfiles": "^1.3.3",
-    "react-doc-viewer": "^0.1.5",
-    "react-dropzone": "^11.4.2"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dropzone": "^11.4.2",
+    "selecto": "^1.17.0"
   }
 }
