--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -41,6 +41,7 @@
     "q3-ui-queryparams": "^3.6.0",
     "q3-ui-queuelogs": "^3.6.10",
     "q3-ui-rest": "^3.6.10",
+    "q3-ui-thread": "^1.0.0",
     "react-butterfiles": "^1.3.3",
     "react-helmet": "^6.1.0",
     "useful-state": "^1.2.3",
