--- a/packages/q3-ui-thread/package.json
+++ b/packages/q3-ui-thread/package.json
@@ -6,11 +6,15 @@
     "q3-ui-test-utils": "^3.4.16"
   },
   "dependencies": {
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
+    "q3-ui-dialog": "^3.6.0",
+    "q3-ui-forms": "^3.6.10",
     "q3-ui-helpers": "^3.6.0",
     "q3-ui-locale": "^3.6.0",
     "q3-ui-permissions": "^3.6.10",
-    "q3-ui-rest": "^3.6.10"
+    "q3-ui-rest": "^3.6.10",
+    "useful-state": "^1.2.3"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
