--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -22,6 +22,7 @@
     "print-js": "^1.6.0",
     "prop-types": "^15.7.2",
     "q3-ui": "^3.6.10",
+    "q3-ui-assets": "^3.6.0",
     "q3-ui-dialog": "^3.6.0",
     "q3-ui-helpers": "^3.6.0",
     "q3-ui-locale": "^3.6.0",
