--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -14,10 +14,7 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "alphabetize-object-keys": "^3.0.0",
     "classnames": "^2.2.6",
-    "dragselect": "^2.3.1",
-    "file-type": "^17.1.2",
     "lodash": "^4.17.20",
     "print-js": "^1.6.0",
     "prop-types": "^15.7.2",
@@ -26,12 +23,11 @@
     "q3-ui-dialog": "^3.6.0",
     "q3-ui-helpers": "^3.6.0",
     "q3-ui-locale": "^3.6.0",
-    "react-butterfiles": "^1.3.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dropzone": "^11.4.2",
-    "react-file-icon": "^1.1.0",
     "react-file-viewer": "^1.2.1",
-    "selecto": "^1.17.0"
+    "selecto": "^1.17.0",
+    "useful-state": "^1.2.3"
   }
 }
