--- a/packages/q3-ui-filemanager/package.json
+++ b/packages/q3-ui-filemanager/package.json
@@ -20,8 +20,10 @@
     "prop-types": "^15.7.2",
     "q3-ui": "^3.6.10",
     "q3-ui-assets": "^3.6.0",
+    "q3-ui-confirm": "^3.6.10",
     "q3-ui-dialog": "^3.6.0",
     "q3-ui-helpers": "^3.6.0",
+    "q3-ui-forms": "^3.6.10",
     "q3-ui-locale": "^3.6.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
