--- a/packages/q3-ui-charts/package.json
+++ b/packages/q3-ui-charts/package.json
@@ -6,11 +6,14 @@
     "q3-ui-test-utils": "^3.8.9"
   },
   "dependencies": {
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-exports": "^1.24.0",
+    "q3-ui-helpers": "^3.8.9",
     "q3-ui-locale": "^3.8.9",
-    "recharts": "^2.1.6"
+    "recharts": "^2.1.6",
+    "useful-state": "^1.2.3"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
