--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "q3-client",
+  "homepage": "https://3merge.github.io/q3-client",
   "version": "1.0.0",
   "private": true,
   "license": "MIT",
@@ -21,7 +22,8 @@
     "upload": "yarn build && lerna publish",
     "deploy": "yarn build && build-storybook --docs",
     "test": "jest --collectCoverage --silent --run-in-band",
-    "jest": "jest"
+    "jest": "jest",
+    "deploy-storybook": "gh-pages -d storybook-static"
   },
   "workspaces": [
     "example",
@@ -47,6 +49,7 @@
     "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^7.32.0",
     "eslint-config-react-3merge": "^1.1.1",
+    "gh-pages": "^4.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.0",
     "jest-localstorage-mock": "^2.4.18",
