--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -23,6 +23,7 @@
     "micromatch": "^4.0.2",
     "moment": "2.29.4",
     "notistack": "1.0.10",
+    "pigeon-maps": "^0.21.3",
     "prop-types": "^15.7.2",
     "q3-ui": "^3.10.11",
     "q3-ui-audit": "^3.11.0",
