--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/moment-timezone": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
+    "@mui/x-data-grid": "^4.0.0",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "comparisons": "^2.2.10",
