--- a/packages/q3-ui-helpers/package.json
+++ b/packages/q3-ui-helpers/package.json
@@ -9,7 +9,8 @@
     "is-glob": "^4.0.3",
     "lodash": "^4.17.20",
     "moment": "2.29.4",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "q3-ui-locale": "^3.10.11"
   },
   "peerDependencies": {
     "@reach/router": "^1.3.4",
