--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/moment-timezone": "^5.10.1",
     "@fullcalendar/react": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
+    "@mui/x-data-grid": "^4.0.0",
     "axios": "^0.24.0",
     "classnames": "^2.2.6",
     "comparisons": "^2.2.10",
@@ -23,6 +24,7 @@
     "micromatch": "^4.0.2",
     "moment": "2.29.4",
     "notistack": "1.0.10",
+    "pigeon-maps": "^0.21.3",
     "prop-types": "^15.7.2",
     "q3-ui": "^3.10.11",
     "q3-ui-audit": "^3.11.0",
