--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -40,6 +40,7 @@
     "q3-ui-helpers": "^3.13.0",
     "q3-ui-locale": "^3.13.0",
     "q3-ui-navbar": "^3.13.1",
+    "q3-ui-notifications": "^3.13.0",
     "q3-ui-permissions": "^3.13.1",
     "q3-ui-queryparams": "^3.13.0",
     "q3-ui-queuelogs": "^3.13.1",
