--- a/packages/q3-ui-docscan/package.json
+++ b/packages/q3-ui-docscan/package.json
@@ -10,7 +10,9 @@
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "q3-ui-helpers": "^4.0.3",
-    "react-webcam": "^7.0.1"
+    "q3-ui-locale": "^4.0.3",
+    "react-webcam": "^7.0.1",
+    "useful-state": "^1.2.3"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
