--- a/packages/q3-ui-rest/package.json
+++ b/packages/q3-ui-rest/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
+    "alphabetize-object-keys": "^3.0.0",
     "axios": "^0.24.0",
     "flat": "^5.0.2",
     "js-file-download": "^0.4.12",
