--- a/packages/q3-admin/package.json
+++ b/packages/q3-admin/package.json
@@ -26,6 +26,7 @@
     "notistack": "3.0.0-alpha.11",
     "pigeon-maps": "^0.21.3",
     "prop-types": "^15.7.2",
+    "q3-components": "^4.5.4",
     "q3-ui": "^4.4.8",
     "q3-ui-audit": "^4.5.4",
     "q3-ui-charts": "^4.4.8",
