--- a/packages/q3-ui-rte/package.json
+++ b/packages/q3-ui-rte/package.json
@@ -11,8 +11,7 @@
     "browser-image-compression": "^1.0.17",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "quill": "^1.3.7",
-    "quill-paste-smart": "^1.4.9",
+    "quill": "2.0.0-dev.3",
     "react-butterfiles": "^1.3.3"
   },
   "peerDependencies": {
