--- a/packages/q3-ui-rte/package.json
+++ b/packages/q3-ui-rte/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "@date-io/moment": "1.x",
     "browser-image-compression": "^1.0.17",
+    "highlight.js": "^11.7.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "quill": "2.0.0-dev.3",
+    "quill": "2.0.0-dev.4",
     "react-butterfiles": "^1.3.3"
   },
   "peerDependencies": {
