--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "notistack": "3.0.0-alpha.11",
     "qs": "^6.9.6",
     "query-string": "^7.0.1",
+    "quill": "^1.3.7",
     "react": "^17.0.1",
     "react-butterfiles": "^1.3.3",
     "react-credit-cards": "^0.8.3",
