--- a/packages/q3-ui-rte/package.json
+++ b/packages/q3-ui-rte/package.json
@@ -12,7 +12,8 @@
     "highlight.js": "^11.7.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "quill": "2.0.0-dev.4",
+    "quill": "^1.3.7",
+    "quill-paste-smart": "^1.4.10",
     "react-butterfiles": "^1.3.3"
   },
   "peerDependencies": {
