--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": "^18.x.x"
+  },
   "resolutions": {
-    "async": "^3.2.3",
-    "browserslist": "^4.20.3",
+    "async": "^3.2.3", 
+    "gatsby": "^4.25.7",
     "glob-parent": "^5.1.2",
     "moment": "^2.29.3",
     "node-fetch": "^2.6.7",
@@ -87,7 +90,7 @@
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "flat": "^5.0.2",
-    "gatsby": "^4.2.0",
+    "gatsby": "^4.25.7",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-canonical-urls": "^4.2.0",
     "gatsby-plugin-force-trailing-slashes": "^1.0.5",
@@ -130,5 +133,6 @@
     "with-location": "^1.3.8",
     "yarn": "^1.22.17",
     "yup": "^0.32.11"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
